Changes for 1.2.7
* Triggered Rule Changes patch added. (squid daddy)

* Lobby Moderator Enhancement patch added. (wisconsin)

* Moore AI fix to Rank Territories, was considering islands as being closer to enemy capitols than other territories with a land route. Also much improved the defense of transports and trasporting locations. (veqryn)

* Moore AI improvement: created a new method so that the AI will attempt to defend the beginning and end of its transport chain. (veqryn)

* Fixed a null pointer errors in Moore AI's rank territories method. (veqryn)

* Combined isTerritoryEnemyAndNotNuetralWater AND isTerritoryEnemyAndNotNeutral INTO isTerritoryEnemyAndNotUnownedWaterOrImpassibleOrRestricted. (veqryn)

* New Territory Attachment, blockadeZone, and Unit Attachment, blockade = value, will allow sea units to blockade territories. (squid daddy)

* national objectives addition of 'uses' and 'atWarPlayers'. Still needs some work on atWar. (squid daddy)

* directOwnershipTerritories National Objective added, ownership by an ally doesn't count. (astabada/franz)

* Enhanced Combat Support attachments. (squid daddy)

* Moore AI purchases tweaking and speeding up. Will no longer consider for purchasing units with zero movement, units with 3 or more attack than defense or defense than attack, 
  and units with zero defense, and sea units with 1 movement, if there are 2 movement sea units available. Also now records when it purchases transports in getDidPurchaseTransports(). (veqryn)

* Null Pointer Exception fix in StrongAI transporting. (veqryn)

* Moore AI fixes for previous update. (veqryn)

* Create new CompositeRouteFinder.java, which will find a route based on 3 territory composite matches. (wisconsin)

* Moore AI fixed several of the reasons why ai can't seem to transport units intelligently or at all. Also made it buy more transports if it needs them. Added new matches and renamed findCertainShips to findTersWithUnitsMatching. (wisconsin)
